--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   </head>
   <body>
     <main id="main">
+      <div id="container">
+
+      </div>
     </main>
     <!-- Don't forget to include React dependencies! -->
     <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
     <script src="node_modules/mocha/mocha.js"></script>
+    <script src="src/reducers/managePets.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('bdd');</script>
     <script src="test/index-test.js"></script>
