--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </main>
     <!-- Don't forget to include React dependencies! -->
     <!-- Open this file and call `mocha.run()` in console to run tests -->
+    <div id="container"></div>
     <div id="mocha"></div>
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
