--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('bdd');</script>
     <script src="test/index-test.js"></script>
+
+    <script src="src/reducers/changeState.js"></script>
   </body>
 </html>
