--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <main id="main">
     </main>
+
+    <div id="page">HI</div>
     <!-- Don't forget to include React dependencies! -->
     <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
@@ -16,5 +18,7 @@
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('bdd');</script>
     <script src="test/index-test.js"></script>
+    <script src="src/reducers/managePets.js" type="text/javascript"></script>
+
   </body>
 </html>
