--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <main id="main">
+      <div id="container">
+      </div>
     </main>
     <!-- Don't forget to include React dependencies! -->
     <!-- Open this file and call `mocha.run()` in console to run tests -->
@@ -16,5 +18,6 @@
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('bdd');</script>
     <script src="test/index-test.js"></script>
+    <script src="src/reducers/managePets.js"></script>
   </body>
 </html>
