--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('bdd');</script>
+    <script src="src/reducers/managePets.js" type="text/javascript"></script>
     <script src="test/index-test.js"></script>
+
   </body>
 </html>
