all tests passing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <main id="main">
     </main>
+      <div id="container">
+      </div>
     <!-- Don't forget to include React dependencies! -->
     <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
